Center figures, avoid footnote figure overlap

--- a/understanding-understanding-optionals/sidenote.css
+++ b/understanding-understanding-optionals/sidenote.css
@@ -11,17 +11,18 @@
 }
 
 figure {
-  width: min(max(36em, calc(50vw + 12em)), 100vw);
-  margin-left: calc(-50vw + 24em);
+  width: min(max(36em, 100vw), 54em);
+  margin-left: max(-25vw, -9em)
 }
 figure img {
-  width: min(max(36em, calc(50vw + 12em)), 100vw);
+  width: min(max(36em, 100vw), 54em)
 }
 figcaption{
-  width: 24em;
-}
-figcaption{
-  width: 24em;
+    margin-top: -1em;
+    margin-bottom: 2em;
+    width: min(max(36em, 100vw), 54em);
+    display:flex;
+    justify-content: center
 }
 
 
